--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   </head>
   <body>
     <h1>Rankings</h1>
-    <input type="text">
+    <input type="text" id="nameInput">
     <br>
     <button id="add">Add To Rankings</button>
 
     <ul id="rankings"></ul>
     <button id="clear">Clear Rankings</button>
 
-    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script> -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.0.0/lodash.min.js"></script> -->
     <script src="js/main.js"></script>
   </body>
