Take input, split and assign to different values
Value is being taken from input box, split and assigned to two variables.
It is also being display in the proper name, score in the UL.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   </head>
   <body>
     <h1>Rankings</h1>
+    <p>Please enter input in format 'Name, Score'</p>
     <input type="text" id="nameInput">
-    <br>
+    <br><br>
     <button id="add">Add To Rankings</button>
 
     <ul id="rankings"></ul>
