Begin styling for page

--- a/index.html
+++ b/index.html
@@ -3,17 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>EverQuoteTest</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>Rankings</h1>
-    <p>Please enter input in format 'Name, Score'</p>
-    <input type="text" id="nameInput">
-    <br><br>
-    <button id="add">Add To Rankings</button>
+        <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <li><i class="fa fa-bullseye fa-5x"></i></li>
+        <li>League Rankings</li>
+        <li><p>Keep track of the ranking for your crazy awesome dart league</p></li>
+      </div>
+    </nav>
 
-    <ul id="rankings"></ul>
-    <button id="clear">Clear Rankings</button>
+    <div class="container">
+      <h1>Rankings</h1>
+      <p>Please enter input in format 'Name, Score'</p>
+      <input type="text" id="nameInput">
+      <br><br>
+      <button id="add">Add To Rankings</button>
+
+      <ul id="rankings"></ul>
+      <button id="clear">Clear Rankings</button>
+    </div>
 
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.0.0/lodash.min.js"></script> -->
