Updated button styling

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <div class="col-md-6 pull-left left-column">
         <h1>Rankings</h1>
         <p>Please enter input in format 'Name, Score'</p>
-        <input type="text" size="35" id="nameInput">
+        <input type="text" size="40" id="nameInput">
         <br><br>
-        <button id="add">Add To Rankings</button>
-        <button id="clear">Clear Rankings</button>
+        <button class="btn btn-primary btn-sm outline" id="add">Add To Rankings</button>
+        <button class="btn btn-primary btn-sm outline" id="clear">Clear Rankings</button>
       </div>
 
       <div class="col-md-6 pull-right">
