New fonts, colors
Fonts updated and changed.
Colors updated.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>EverQuoteTest</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link href="http://fonts.googleapis.com/css?family=Ubuntu:bold" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Nobile" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
@@ -12,7 +14,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <li><i class="fa fa-bullseye fa-5x"></i></li>
-        <li>League Rankings</li>
+        <h1>League Rankings</h1>
         <li><p>Keep track of the ranking for your crazy awesome dart league</p></li>
       </div>
     </nav>
