Regex to test input. No longer clears ul#rankings when improper input.
Using regex to make sure input is proper format.
If improper input existing scores still displayed.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-        <!-- Fixed navbar -->
+
+    <!-- navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <li><i class="fa fa-bullseye fa-5x"></i></li>
